kubernetes/overlays/infrastructure/infra/applications/oauth2-proxy/network-policies/allow-ingress-controller.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller
spec:
  podSelector:
    matchLabels:
      app: oauth2-proxy
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          role: ingress-controller
      ports:
      - protocol: TCP
        port: 4180
